# raytracer

./: Cargo.toml
src/: aabb.rs  bvh_node.rs  camera.rs  constant_medium.rs  hit_record.rs  hittable.rs  hittable_enum.rs  hittable_list.rs  hittable_trait.rs  interval.rs  main.rs  material.rs  quad.rs  random.rs  ray.rs  rotation.rs  scenes.rs  sphere.rs  translate.rs
src/core/: camera.rs  camera_builder.rs  hit_record.rs  hittable.rs  hittable_list.rs  mod.rs
src/gui/: mod.rs
src/materials/: dielectric.rs  lambertian.rs  material.rs  metal.rs  mod.rs
src/materials/textures/: image.rs  mod.rs  noise_texture.rs  perlin.rs  solid.rs
src/scenes/: mod.rs  scenes.rs
src/shapes/: aabb.rs  bvh_node.rs  mod.rs  quad.rs  sphere.rs
src/textures/: checker.rs  image.rs  mod.rs  perlin.rs  texture.rs
src/utility/: mod.rs
src/wrappers/: constant_medium.rs  mod.rs  rotation.rs  translate.rs
