[package]
name = "raytracer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.8"
indicatif = "0.17.7"
nalgebra = "0.32.3"
rand = {version = "0.8.5", features = ['small_rng']}
rayon = "1.8.1"
eframe = "0.27.2"

